# distance_transform_coverage_exploration

./: README.md  coverage.rviz
map_coverage/: CMakeLists.txt  distanceTransformImg.pgm  package.xml
map_coverage/include/: DisantanceMapCoverage.h  DistanceTransformGoalCalculator.h  GoalCalculator.h  params.h
map_coverage/launch/: coverage.launch
map_coverage/src/: map_coverage_ros_node.cpp  test.cpp  test_node.cpp
