<?xml version="1.0"?>
<package>
  <name>map_coverage</name>
  <version>1.0.0</version>
  <description>The map_coverage package</description>
  <maintainer email="yakir@cogniteam.com">Igor Makhtes</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>move_base</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>


</package>

